--- a/blogs.pug
+++ b/blogs.pug
@@ -1,9 +1,9 @@
 extend pug/_plantilla.pug
-block contenidos
+block contenido_main
 	main
 		h1 Lista de Blogs
 		section.section__grid
-			+caja('imagen', 'jeremy', 'y si volvieramos a empezar?', 'Hace unos dias estube pensando en que...')
-			+caja('imagen', 'jeremy', 'y si volvieramos a empezar?', 'Hace unos dias estube pensando en que...')
-			+caja('imagen', 'jeremy', 'y si volvieramos a empezar?', 'Hace unos dias estube pensando en que...')
-			+caja('imagen', 'jeremy', 'y si volvieramos a empezar?', 'Hace unos dias estube pensando en que...')
+			+caja('imagen', 'jeremy', 'Si volvieramos a empezar?', 'Hace unos dias estube pensando en que...')
+			+caja('imagen', 'jeremy', 'Si volvieramos a empezar?', 'Hace unos dias estube pensando en que...')
+			+caja('imagen', 'jeremy', 'Si volvieramos a empezar?', 'Hace unos dias estube pensando en que...')
+			+caja('imagen', 'jeremy', 'Si volvieramos a empezar?', 'Hace unos dias estube pensando en que...')
