--- a/participantes.pug
+++ b/participantes.pug
@@ -1,5 +1,5 @@
 extend pug/_plantilla.pug
-block contenidos
+block contenido_main
 	main
 		h1.tituloPrincipal Participantes
 		section.section__grid
