--- a/pug/_plantilla.pug
+++ b/pug/_plantilla.pug
@@ -4,5 +4,5 @@ html(lang="es")
 	include _head.pug
 	body 
 		include _header.pug
-		block contenidos
+		block contenido_main
 		include _footer.pug
