--- a/blog/blog1.pug
+++ b/blog/blog1.pug
@@ -1,7 +1,25 @@
 extends _plantilla
 block hero 
-	section
-block asideNormal
-	p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate, a!
+	section.hero
+		h1.title__blog Bienvenido a Cerro House
 block contenidoBlog
-	p Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, minus optio in mollitia hic repellat eaque vero porro esse quos?
+	p.texto__principal No, no es broma, Cerro House ahora tiene un website superPerron!!!, o eso creo...
+	p Weno, weno, no es lo mas emocionante del mundo, tampoco es la gran cosa hacer esto. Tecnicamente demoré alrededor de una semana en realizarlo.
+	p Eso si, aunque no sea la gran cosa, hacer este proyecto hizo que envejeciera 2 o 3 años.
+	p Tengo que recordarles que este proyecto lo hice con mucho amor 😏... naaaah, es broma, pero si quieres no es broma 😏
+	p En sí, yo queria que la pagina fuera mas interactiva pero no habia presupuesto 😪, y como sé que ustedes no tienen para comprarle pizza a Mirella, pues dije: NAAAAH, asi no más...
+	p También puedo decir que si le hubiera pedido ayuda a Alex, la página habría quedado mucho mejor. En fin, no le pedí ayuda por mi orgullo de programador xd (naah, no se crean). Weno, son solo Detashes!
+	p Pero dejame hablarte de la pagina misma. La pagina cuenta con los perfiles de todos los integrantes del grupo Cerro House
+	p Pero puede que te preguntes ¿Dondé están los que faltan? y yo te dice: ¿Recuerdas la vez que pedí que me ayudaras con una tarea en la que tenias que decirme unos colores? Pues que crees, todos los que me dijeron el colorcito estan aqui.
+	p No creas que estoy molesto con aquellos que no me respondieron, para nada, solo los odio okno. De hecho, en el caso que quieran estar aqui solo deben mandarme un mensaje diendome FUA LA REVIVIS SCUBI
+	p Y por supuesto, tu tambien puedes escribir articulos como esté, solo tienes que mandarme un mensaje con lo que quieres escribir aqui
+	p Personalmente iré colocando algunos anuncios como este o algunos blogs sobre el grupo.
+	p La pagina estará activa 2 semanas despues de su lanzamiento, pero si les gusta mucho puede que lo alarge por unas semanas más
+	p Algo que quiero que no se te olvide es que todo el contenido de esta página es por mera diversión, recuerda que si hay algo que no te gusta o te incomoda, no dudes en contactarme para bloquearte xd 
+	p Sin mas que escribir, espero que te guste mi proyecto y que me busques trabajo... ando sin plata :(
+	p Weno bais
+	p Si llegaste hasta aqui escribeme un 
+		span Jirafa Obesa en Surco
+	+buttons_blog('A oc', 'Mucho Texto', 'ª')
+block asideNormal
+	+tarjeta__usuario('jeremy.jpg', 'Jeremyispapo', '@Palomino.dev')
