--- a/landing.pug
+++ b/landing.pug
@@ -3,16 +3,9 @@ block contenido_main
 	main 
 		section.hero 
 			article.hero__content
-				h1.tituloPrincipal Titulo del Hero
-				p Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque quis voluptas accusantium sed omnis atque id quia nam et ut. Est, ipsum vitae? Sit labore eveniet, doloribus error iusto repudiandae?
+				h1.tituloPrincipal Bienvenido a Cerro House
+				p No, no es broma, Cerro House ahora tiene un website superPerron!!!, o eso creo...
 		section.anuncios
 			h2.section__title Anuncios
 			.section__grid
-				+caja('perron','jeremy','Titulo Perron','hola como estas yo soy jeremy palomino y soy tu mejor amigo')
-				+caja('perron','jeremy','Titulo Perron','hola como estas yo soy jeremy palomino y soy tu mejor amigo')
-				+caja('perron','jeremy','Titulo Perron','hola como estas yo soy jeremy palomino y soy tu mejor amigo')
-				+caja('perron','jeremy','Titulo Perron','hola como estas yo soy jeremy palomino y soy tu mejor amigo')
-				+caja('perron','jeremy','Titulo Perron','hola como estas yo soy jeremy palomino y soy tu mejor amigo')
-				+caja('perron','jeremy','Titulo Perron','hola como estas yo soy jeremy palomino y soy tu mejor amigo')
-				+caja('perron','jeremy','Titulo Perron','hola como estas yo soy jeremy palomino y soy tu mejor amigo')
-			
+				+caja('foto_portada.png','jeremy.jpg','Bienvenido a Cerro House','No, no es broma, Cerro House ahora tiene un website superPerron!!!, o eso creo...')
