Sección del Hero terminada

--- a/blog/blog1.pug
+++ b/blog/blog1.pug
@@ -1,7 +1,9 @@
 extends _plantilla
+block direccionCSS
+	link(rel="stylesheet", href="css/landing.css", attr)
 block hero 
 	section.hero
-		h1.title__blog Bienvenido a Cerro House
+		h1.title__blog Bienvenido a Cerro House Mouse
 block contenidoBlog
 	p.texto__principal No, no es broma, Cerro House ahora tiene un website superPerron!!!, o eso creo...
 	p Weno, weno, no es lo mas emocionante del mundo, tampoco es la gran cosa hacer esto. Tecnicamente demoré alrededor de una semana en realizarlo.
