--- a/perfiles/jeremy.pug
+++ b/perfiles/jeremy.pug
@@ -1,6 +1,8 @@
 extends _plantilla
+block direccionCSS
+	link(rel="stylesheet", href="css/jeremy.css")
 block principal 
-	+principal('jeremy','Jeremyispapo','Palomino.Dev','Tareas hay muchas, vida una sola, asi que...','17/07/21')
+	+principal('jeremy.jpg','Jeremyispapo','https://www.instagram.com/palomino.dev/','Palomino.Dev','Tareas hay muchas, vida una sola, asi que...','17/07/21')
 
 block stickers
 	+stickers('st1','st2','st3','st4','st5')
@@ -9,7 +11,7 @@ block photos
 	+photos('ph1','ph2','ph3')
 
 block songs
-	+songs('twenty__pilots.png','Level of Concerted', 'twenty one Pilot','3:15 min', 'https://www.twentyonepilot.com')
-	+songs('dualipa.png','Leviating', 'Dua Lipa', '4:20 min', 'https://www.dualipa.com')
-	+songs('Daikiri.png', 'Daikiri','Simon Grossmann','3:30 min', 'https://www.simongrossmann.com')
-	+songs('todo_de_ti.png','todo_de_ti','Rauw Alejandro','4:20 min','https://www.rauwalejandro.com')
+	+songs('twenty__pilots.png','Level of Concern', 'twenty one Pilot','3:52 min', 'https://www.youtube.com/watch?v=loOWKm8GW6A')
+	+songs('dualipa.png','Leviating', 'Dua Lipa', '3:50 min', 'https://www.youtube.com/watch?v=TUVcZfQe-Kw')
+	+songs('Daikiri.png', 'Daikiri','Simon Grossmann','3:57 min', 'https://www.youtube.com/watch?v=yJGAEh2gmDE')
+	+songs('todo_de_ti.png','todo_de_ti','Rauw Alejandro','3:31 min','https://www.youtube.com/watch?v=CFPLIaMpGrY')
