--- a/pug/_header.pug
+++ b/pug/_header.pug
@@ -1,6 +1,7 @@
 header 
+	figure.logo: img(src="assets/images/logo_cerro_house.png")
+	.icon_menu
 	nav 
-		.logo
 		ul
 			li: a(href="landing.html") Inicio
 			li: a(href="participantes.html") Participantes
