--- a/pug/_footer.pug
+++ b/pug/_footer.pug
@@ -1,4 +1,2 @@
 footer
-	p Todos los reservados por Cerro House || Oficial
-	| &copy; 2016 |
-	a(href='#') View Source
+	p Todos los reservados por Cerro House || Oficial | &copy; 2021 |
