--- a/pug/_head.pug
+++ b/pug/_head.pug
@@ -3,3 +3,6 @@ head
 	meta(http-equiv="X-UA-Compatible", content="IE=edge")
 	meta(name="viewport", content="width=device-width, initial-scale=1.0")
 	title Cerro House || Oficial
+	link(rel="preconnect", href="https://fonts.gstatic.com")
+	link(href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,200&family=Roboto:wght@700&display=swap", rel="stylesheet")
+	block direccionCSS
