fase final de mis proyectos

--- a/blog/blog1.pug
+++ b/blog/blog1.pug
@@ -3,6 +3,8 @@ block direccionCSS
 	link(rel="stylesheet", href="css/landing.css", attr)
 block hero 
 	section.hero
+		figure.hero__image
+			img(src="" alt="f")
 		h1.title__blog Bienvenido a Cerro House Mouse
 block contenidoBlog
 	p.texto__principal No, no es broma, Cerro House ahora tiene un website superPerron!!!, o eso creo...
