--- a/blogs.pug
+++ b/blogs.pug
@@ -4,5 +4,7 @@ block direccionCSS
 block contenido_main
 	main
 		h1 Lista de Blogs
-		section.section__grid
-			+caja('imagen', 'jeremy', 'Si volvieramos a empezar?', 'Hace unos dias estube pensando en que...')
+		section.pd__section
+			.section__grid
+				+caja('imagen', 'jeremy', 'Si volvieramos a empezar?', 'Hace unos dias estube pensando en que...', 'blog1.html')
+				
