--- a/participantes.pug
+++ b/participantes.pug
@@ -3,6 +3,10 @@ block direccionCSS
 	link(rel="stylesheet", href="css/participantes.css")
 block contenido_main
 	main
-		h1.tituloPrincipal Participantes
-		section.section__grid
-			+tarjeta__usuario('jeremy.jpg', 'Jeremyispapo', '@Palomino.dev')
+		section.pd__section 
+			h1.section__title Participantes
+			section.section__grid
+				+tarjeta__usuario('jeremy.jpg', 'Jeremyispapo', '@Palomino.dev', 'jeremy.html')
+				+tarjeta__usuario('jeremy.jpg', 'Jeremyispapo', '@Palomino.dev', 'jeremy.html')
+				+tarjeta__usuario('jeremy.jpg', 'Jeremyispapo', '@Palomino.dev', 'jeremy.html')
+				+tarjeta__usuario('jeremy.jpg', 'Jeremyispapo', '@Palomino.dev', 'jeremy.html')
