--- a/perfiles/_plantilla.pug
+++ b/perfiles/_plantilla.pug
@@ -1,6 +1,6 @@
 extends ../pug/_plantilla
 block contenido_main
-	main 
+	main.pd__section
 		section.principal
 			block principal
 		section.stickers
