--- a/sass/landing.sass
+++ b/sass/landing.sass
@@ -16,8 +16,7 @@ main
 	p 
 		color: #fff
 		@include text__regular
-.tituloPrincipal
+.tituloPrincipal a
 	@include title__h1
 
-.anuncios
-	padding: $espaciado_normal + 1rem
+
