--- a/css/landing.css
+++ b/css/landing.css
@@ -10,8 +10,16 @@ html {
   font-size: 62.5%;
 }
 
+body {
+  background: #c7c7c7;
+}
+
 img {
   width: 100%;
+}
+
+a {
+  text-decoration: none;
 }
 
 header {
@@ -58,7 +66,7 @@ header nav ul {
   display: flex;
 }
 
-.button__link {
+.button__link, .button__link--user {
   display: inline-block;
   background-color: #2510df;
   -webkit-margin-before: 1rem;
@@ -68,6 +76,84 @@ header nav ul {
   color: #fff;
   text-decoration: none;
   border-radius: 0.7rem;
+}
+.button__link--user {
+  font-size: 1.1rem;
+  padding-block: 0.5rem;
+  padding-inline: 2rem;
+}
+
+.section__grid {
+  width: 100%;
+  max-width: 111rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0 auto;
+}
+
+.section__title {
+  font-size: 2.2rem;
+  font-family: "Roboto", sans-serif;
+  color: #1c1c1c;
+  margin-block: 2rem;
+  text-decoration: underline;
+}
+
+.pd__section {
+  padding: 2rem;
+}
+
+.tarjeta {
+  width: 80%;
+  max-width: 25rem;
+  height: 30rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 1rem;
+  margin: 2rem;
+  -webkit-box-shadow: 0px 0px 5px 0px #989898;
+          box-shadow: 0px 0px 5px 0px #989898;
+}
+.tarjeta__imagen {
+  width: 11rem;
+  height: 11rem;
+  border-radius: 20rem;
+  overflow: hidden;
+  border: 1px solid #1c1c1c;
+}
+
+.subtitle__card, .subtitle__card--perfil {
+  font-style: italic;
+  text-decoration: none;
+  font-size: 1.6rem;
+}
+.subtitle__card--perfil {
+  -webkit-margin-start: 1rem;
+          margin-inline-start: 1rem;
+}
+
+.title__card {
+  color: #1c1c1c;
+  text-align: center;
+  font-size: 1.9rem;
+  text-align: center;
 }
 
 footer {
@@ -88,6 +174,88 @@ footer {
   color: #fff;
 }
 
+.caja {
+  margin: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0.4rem;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  max-width: 27rem;
+  border-radius: 0.7rem;
+  -webkit-box-shadow: 0px 0px 5px 0px #989898;
+          box-shadow: 0px 0px 5px 0px #989898;
+}
+.caja .caja__imagen {
+  width: 100%;
+}
+.caja .caja__contenido {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 4fr;
+  grid-template-columns: 1fr 4fr;
+  -ms-grid-rows: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+.caja .caja__contenido > *:nth-child(1) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+}
+.caja .caja__contenido > *:nth-child(2) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+}
+.caja .caja__contenido > *:nth-child(3) {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+}
+.caja .caja__contenido > *:nth-child(4) {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+}
+.caja .caja__contenido .caja__usuario {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1/3;
+  width: 4rem;
+  height: 4rem;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  -ms-grid-row-align: center;
+      align-self: center;
+  border-radius: 30rem;
+  overflow: hidden;
+  border: 1px solid #1c1c1c;
+}
+.caja .caja__contenido .title__card {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+  color: #1c1c1c;
+  text-align: center;
+  font-size: 1.9rem;
+}
+.caja .caja__contenido p {
+  text-align: center;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+  font-style: italic;
+}
+
 .hero {
   width: 100%;
 }
@@ -106,12 +274,12 @@ footer {
   font-size: 1.6rem;
 }
 
-.tituloPrincipal {
+.tituloPrincipal a {
   font-family: "Roboto", sans-serif;
-  font-size: 2.5rem;
+  font-size: 2.7rem;
   color: #fff;
+  text-decoration: none;
 }
-
-.anuncios {
-  padding: 3rem;
+.tituloPrincipal a:hover {
+  text-decoration: underline;
 }
