--- a/sass/componentes/_configuraciones.sass
+++ b/sass/componentes/_configuraciones.sass
@@ -4,8 +4,10 @@ $color__secundario: #2510df
 $color__oscuro: #1c1c1c
 $espaciado_normal: 2rem
 $text__size: 1.6rem
-$h1__size: 2.5rem
+$h1__size: 2.7rem
+$section__title: 2.2rem
 $border__radius: .7rem
+$border__radius--card: 1rem
 
 //Mixins
 
@@ -23,8 +25,16 @@ $border__radius: .7rem
 	font-family:'Roboto', sans-serif
 	font-size: $h1__size
 	color: #fff
+	text-decoration: none
+	&:hover
+		text-decoration: underline
 @mixin text__regular
 	font-size:  $text__size
+
+@mixin card__title
+	color: $color__oscuro
+	text-align: center
+	font-size: $text__size + .3rem
 
 @mixin button__link
 	display: inline-block
@@ -35,3 +45,62 @@ $border__radius: .7rem
 	color: #fff
 	text-decoration: none
 	border-radius: $border__radius
+
+@mixin section__title
+	font-size: $section__title
+	font-family: 'Roboto',sans-serif
+	color: $color__oscuro
+	margin-block: 2rem
+	
+	text-decoration: underline
+@mixin section__grid
+	width: 100%
+	max-width: 111rem
+	display: flex
+	flex-wrap: wrap
+	justify-content: center
+	margin: 0 auto
+@mixin sombra__caja
+	box-shadow: 0px 0px 5px 0px #989898
+
+@mixin cursivas
+	font-style: italic
+
+@mixin card__page
+	margin: 1rem
+	display: flex
+	padding: .4rem
+	flex-direction: column
+	width: 100%
+	max-width:27rem
+	border-radius: $border__radius
+	@include sombra__caja
+	.caja__imagen
+		width: 100%
+	.caja__contenido
+		display: grid
+		// height:6rem
+		grid-template-columns: 1fr 4fr
+		grid-template-rows: 1fr 1fr
+		.caja__usuario
+			grid-column: 1/2
+			grid-row: 1/3
+			width: 4rem
+			height: 4rem
+			justify-self: center
+			align-self: center
+			border-radius: 30rem
+			overflow: hidden
+			border: 1px solid $color__oscuro
+		.title__card
+			grid-column: 2/3
+			grid-row: 1/2
+			@include card__title
+		p
+			text-align: center
+			grid-column: 2/3
+			grid-row: 2/3
+			@include cursivas
+@mixin pd__section
+	padding: $espaciado_normal
+
