--- a/sass/participantes.sass
+++ b/sass/participantes.sass
@@ -1,1 +1,27 @@
 @import componentes/_plantilla
+
+.tarjeta
+	width: 80%
+	max-width: 25rem
+	height: 30rem
+	display: flex
+	flex-direction: column
+	align-items: center
+	justify-content: center
+	border-radius: $border__radius--card
+	margin: $espaciado_normal
+	@include sombra__caja
+	&__imagen
+		width: 11rem
+		height: 11rem
+		border-radius: 20rem
+		overflow: hidden
+		border: 1px solid $color__oscuro
+.subtitle__card 
+	@include cursivas
+	text-decoration: none
+	font-size: $text__size
+
+.title__card 
+	@include card__title
+	text-align: center
