no hay problema alguno en la muestra v.1

--- a/blog/blog1.pug
+++ b/blog/blog1.pug
@@ -4,7 +4,7 @@ block direccionCSS
 block hero 
 	section.hero
 		figure.hero__image
-			img(src="assets/images/foto_portada.png" alt="f")
+			img(src="assets/images/anuncios_blog/blog1.png" alt="f")
 		h1.hero__title Bienvenido a Cerro House Mouse
 block contenidoBlog
 	p.texto__principal No, no es broma, Cerro House ahora tiene un website superPerron!!!, o eso creo...
@@ -26,4 +26,4 @@ block contenidoBlog
 		span Jirafa Obesa en Surco
 	+buttons_blog('A oc', 'Mucho Texto', 'ah ya')
 block asideNormal
-	+tarjeta__usuario('jeremy/jeremy.jpg', 'Jeremyispapo', '@Palomino.dev', 'jeremy.html')
+	+tarjeta__usuario('jeremy/jeremy.jpg', 'Jeremyispapo', 'palomino.dev', 'jeremy.html')
