--- a/landing.pug
+++ b/landing.pug
@@ -17,4 +17,4 @@ block contenido_main
 		section.pd__section
 			h2.section__title Anuncios
 			.section__grid
-				+caja('foto_portada.png','jeremy/jeremy.jpg','Bienvenido a Cerro House','No, no es broma, Cerro House ahora tiene un website superPerron!!!, o eso creo...','blog1.html')
+				+caja('blog1.png','jeremy/jeremy.jpg','Bienvenido a Cerro House','No, no es broma, Cerro House ahora tiene un website superPerron!!!, o eso creo...','blog1.html')
