--- a/sass/plantilla-blog.sass
+++ b/sass/plantilla-blog.sass
@@ -1,5 +1,9 @@
 @import componentes/_plantilla
-
+.hero__image
+	width: 100%
+	max-height: 49rem
+	overflow: hidden
+	object-fit: cover
 .hero__title
 	font-size: $text__size + 1rem
 	color: $color__oscuro
@@ -16,6 +20,11 @@
 .bloque__texto
 	p
 		font-size: $text__size
+		margin-block-end: 2rem
+
+.bloque__image
+	width: 100%
+	margin-block: 2rem
 
 .aside
 	display: flex
