--- a/blogs.pug
+++ b/blogs.pug
@@ -6,5 +6,9 @@ block contenido_main
 		section.pd__section
 			h1.section__title Lista de Blogs
 			.section__grid
-				+caja('foto_portada.png','jeremy/jeremy.jpg','Bienvenido a Cerro House','No, no es broma, Cerro House ahora tiene un website superPerron!!!, o eso creo...','blog1.html')
+				+caja('blog1.png','jeremy/jeremy.jpg','Bienvenido a Cerro House','No, no es broma, Cerro House ahora tiene un website superPerron!!!, o eso creo...','blog1.html')
+				+caja('blog2.jpg','andrea/andrea.jpg','!!Yo elijo dónde me gustaría vivir!!','Me gustaría vivir en Corea del Sur , por qué se habla muy bonito de ese lugar aparte de su comida .','blog2.html')
+				+caja('blog3.jpg','andrea/andrea.jpg','Yo elijo mi don 🦸🏻‍♀️','Bueno manos si se me concidera , poder tener un don sería el de leer mentes .','blog3.html')
+				+caja('blog4.jpg','kiara/kiara.jpg','Story time de viejes 😳','Weno me presento soy kiArA, hablare de algunos sucesos que me pasaron de algunos viajes que paso...','blog4.html')
+				
 				
