--- a/css/landing.css
+++ b/css/landing.css
@@ -275,12 +275,19 @@ footer {
           flex-direction: column;
   width: 100%;
   max-width: 27rem;
+  height: 100%;
+  min-height: 26.2rem;
+  max-height: 27rem;
   border-radius: 0.7rem;
   -webkit-box-shadow: 0px 0px 5px 0px #989898;
           box-shadow: 0px 0px 5px 0px #989898;
 }
 .caja .caja__imagen {
   width: 100%;
+  height: 13rem;
+  overflow: hidden;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .caja .caja__contenido {
   display: -ms-grid;
