--- a/css/plantilla-blog.css
+++ b/css/plantilla-blog.css
@@ -275,12 +275,19 @@ footer {
           flex-direction: column;
   width: 100%;
   max-width: 27rem;
+  height: 100%;
+  min-height: 26.2rem;
+  max-height: 27rem;
   border-radius: 0.7rem;
   -webkit-box-shadow: 0px 0px 5px 0px #989898;
           box-shadow: 0px 0px 5px 0px #989898;
 }
 .caja .caja__imagen {
   width: 100%;
+  height: 13rem;
+  overflow: hidden;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .caja .caja__contenido {
   display: -ms-grid;
@@ -345,6 +352,14 @@ footer {
   font-style: italic;
 }
 
+.hero__image {
+  width: 100%;
+  max-height: 49rem;
+  overflow: hidden;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .hero__title {
   font-size: 2.8rem;
   color: #1c1c1c;
@@ -364,6 +379,13 @@ footer {
 
 .bloque__texto p {
   font-size: 1.8rem;
+  -webkit-margin-after: 2rem;
+          margin-block-end: 2rem;
+}
+
+.bloque__image {
+  width: 100%;
+  margin-block: 2rem;
 }
 
 .aside {
