--- a/participantes.pug
+++ b/participantes.pug
@@ -6,4 +6,8 @@ block contenido_main
 		section.pd__section 
 			h1.section__title Participantes
 			section.section__grid
-				+tarjeta__usuario('jeremy/jeremy.jpg', 'Jeremyispapo', '@Palomino.dev', 'jeremy.html')
+				+tarjeta__usuario('jeremy/jeremy.jpg', 'Jeremyispapo', 'palomino.dev', 'jeremy.html')
+				+tarjeta__usuario('andrea/andrea.jpg', 'Andrea', 'andreadelacruz_26', 'andrea.html')
+				+tarjeta__usuario('kiara/kiara.jpg', 'kiara', 'kiara.sadith', 'kiara.html')
+				+tarjeta__usuario('alexandro/alexandro.jpg', 'alexandro', 'pieroj_02', 'alexandro.html')
+				+tarjeta__usuario('adhrian/adhrian.jpg', 'adhrian', 'adrh023', 'adhrian.html')
