--- a/sass/componentes/_configuraciones.sass
+++ b/sass/componentes/_configuraciones.sass
@@ -76,10 +76,16 @@ $color__button__focus: green
 	flex-direction: column
 	width: 100%
 	max-width:27rem
+	height:100%
+	min-height: 26.2rem
+	max-height: 27rem
 	border-radius: $border__radius
 	@include sombra__caja
 	.caja__imagen
 		width: 100%
+		height: 13rem
+		overflow: hidden
+		object-fit: cover
 	.caja__contenido
 		display: grid
 		// height:6rem
