--- a/participantes.pug
+++ b/participantes.pug
@@ -8,6 +8,7 @@ block contenido_main
 			section.section__grid
 				+tarjeta__usuario('jeremy/jeremy.jpg', 'Jeremyispapo', 'palomino.dev', 'jeremy.html')
 				+tarjeta__usuario('andrea/andrea.jpg', 'Andrea', 'andreadelacruz_26', 'andrea.html')
-				+tarjeta__usuario('kiara/kiara.jpg', 'kiara', 'kiara.sadith', 'kiara.html')
-				+tarjeta__usuario('alexandro/alexandro.jpg', 'alexandro', 'pieroj_02', 'alexandro.html')
-				+tarjeta__usuario('adhrian/adhrian.jpg', 'adhrian', 'adrh023', 'adhrian.html')
+				+tarjeta__usuario('kiara/kiara.jpg', 'Kiara', 'kiara.sadith', 'kiara.html')
+				+tarjeta__usuario('alexandro/alexandro.jpg', 'Alexandro', 'pieroj_02', 'alexandro.html')
+				+tarjeta__usuario('adhrian/adhrian.jpg', 'Adhrian', 'adrh023', 'adhrian.html')
+				+tarjeta__usuario('mirella/mirella.jpg', 'Mirella', 'papita_121', 'mirella.html')
