--- a/sass/componentes/_configuraciones.sass
+++ b/sass/componentes/_configuraciones.sass
@@ -106,6 +106,7 @@ $color__button__focus: green
 			grid-row: 1/2
 			@include card__title
 		p
+			color: $color__oscuro
 			text-align: center
 			grid-column: 2/3
 			grid-row: 2/3
