--- a/sass/componentes/_plantilla.sass
+++ b/sass/componentes/_plantilla.sass
@@ -66,6 +66,7 @@ a
 	@include cursivas
 	text-decoration: none
 	font-size: $text__size
+	color: $color__oscuro
 	&--perfil
 		@extend .subtitle__card
 		margin-inline-start: 1rem
