reparando error en los directorios

--- a/pug/_header.pug
+++ b/pug/_header.pug
@@ -4,6 +4,6 @@ header.header
 		.header__icon#menu 
 		nav.nav#nav 
 			ul.nav__ul
-				li.nav__item: a.nav__link(href="landing.html") Inicio
+				li.nav__item: a.nav__link(href="index.html") Inicio
 				li.nav__item: a.nav__link(href="blogs.html") Blog
 				li.nav__item: a.nav__link(href="participantes.html") Participantes
