--- a/css/plantilla-blog.css
+++ b/css/plantilla-blog.css
@@ -179,9 +179,9 @@ a:visited {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   margin: 0 auto;
 }
 
@@ -387,6 +387,14 @@ footer {
 
 .bloque__image {
   width: 100%;
+  margin-block: 2rem;
+}
+
+.bloque__title {
+  font-size: 2.3rem;
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  text-decoration: underline;
   margin-block: 2rem;
 }
 
