--- a/sass/plantilla-blog.sass
+++ b/sass/plantilla-blog.sass
@@ -26,6 +26,13 @@
 	width: 100%
 	margin-block: 2rem
 
+.bloque__title
+	font-size: $text__size + .5rem
+	font-family: 'Roboto', sans-serif
+	text-transform: uppercase
+	text-decoration: underline
+	margin-block: 2rem
+
 .aside
 	display: flex
 	justify-content: center
