agregando blog6 y blog7

--- a/blog/blog5.pug
+++ b/blog/blog5.pug
@@ -37,7 +37,7 @@ block contenidoBlog
 	h3.bloque__title Kiara
 	figure.bloque__image
 		img(src="assets/images/anuncios_blog/blog5/fb6.jpg")
-	p No se ustedes, pero a mí me hace acordar a una de las hijas de Grud, jajajaja.
+	p No se ustedes, pero a mí me hace acordar a una de las hijas de Gru, jajajaja.
 
 	h3.bloque__title Sagasti xd
 	figure.bloque__image
