--- a/blogs.pug
+++ b/blogs.pug
@@ -7,9 +7,17 @@ block contenido_main
 			h1.section__title Lista de Blogs
 			.section__grid
 				+caja('blog1.png','jeremy/jeremy.jpg','Bienvenido a Cerro House','No, no es broma, Cerro House ahora tiene un website superPerron!!!, o eso creo...','blog1.html')
+
 				+caja('blog2.jpg','andrea/andrea.jpg','!!Yo elijo dónde me gustaría vivir!!','Me gustaría vivir en Corea del Sur , por qué se habla muy bonito de ese lugar aparte de su comida .','blog2.html')
+
 				+caja('blog3.jpg','andrea/andrea.jpg','Yo elijo mi don 🦸🏻‍♀️','Bueno manos si se me concidera , poder tener un don sería el de leer mentes .','blog3.html')
+
 				+caja('blog4.jpg','kiara/kiara.jpg','Story time de viajes 😳','Weno me presento soy kiArA, hablare de algunos sucesos que me pasaron de algunos viajes que paso...','blog4.html')
-				+caja('blog5.jpg','jeremy/jeremy.jpg','¿Caras de Pixar?', '¿Te has preguntado como serias en un dibujo de pixar?')
+
+				+caja('blog5.jpg','jeremy/jeremy.jpg','¿Caras de Pixar?', '¿Te has preguntado como serias en un dibujo de pixar?', 'blog5.html')
+
+				+caja('blog6.jpg','adhrian/adhrian.jpg','Mano!, Loki está reintenso', 'Mañana sale el siguiente episodio pero creo que ya fue la línea temporal. Literal van a hacer a lo "volver al futuro"', 'blog6.html')
+
+				+caja('blog7.jpg','alexandro/alexandro.jpg','La Copa América', 'oficialmente Conmebol Copa América, es el principal torneo internacional oficial de fútbol masculino en América del Sur.', 'blog7.html')
 				
 				
