entrada blog8 carrera el siglo

--- a/blogs.pug
+++ b/blogs.pug
@@ -19,5 +19,5 @@ block contenido_main
 				+caja('blog6.jpg','adhrian/adhrian.jpg','Mano!, Loki está reintenso', 'Mañana sale el siguiente episodio pero creo que ya fue la línea temporal. Literal van a hacer a lo "volver al futuro"', 'blog6.html')
 
 				+caja('blog7.jpg','alexandro/alexandro.jpg','La Copa América', 'oficialmente Conmebol Copa América, es el principal torneo internacional oficial de fútbol masculino en América del Sur.', 'blog7.html')
-				
-				
+
+				+caja('blog8.jpg', 'jeremy/jeremy.jpg', 'La carrera del siglo', '¿Crees que eres competencia para nosotros?', 'blog8.html')
