centrado de los elementos

--- a/sass/componentes/_configuraciones.sass
+++ b/sass/componentes/_configuraciones.sass
@@ -61,7 +61,7 @@ $color__button__focus: green
 	max-width: 111rem
 	display: flex
 	flex-wrap: wrap
-	justify-content: flex-start
+	justify-content: center
 	margin: 0 auto
 @mixin sombra__caja
 	box-shadow: 0px 0px 5px 0px #989898
