reparando perfil de kiara

--- a/perfiles/kiara.pug
+++ b/perfiles/kiara.pug
@@ -2,7 +2,7 @@ extends _plantilla
 block direccionCSS
 	link(rel="stylesheet", href="css/plantilla-perfil.css")
 block principal 
-	+principal('Kiara/kiara.jpg','Kiara','https://www.instagram.com/kiara.sadith/','kiara.sadith',"Ay esque nose we 😎🤡",'30/03/21')
+	+principal('kiara/kiara.jpg','Kiara','https://www.instagram.com/kiara.sadith/','kiara.sadith',"Ay esque nose we 😎🤡",'30/03/21')
 
 block stickers
 	+stickers('kiara/stickers/st1.webp','kiara/stickers/st2.webp','kiara/stickers/st3.webp','kiara/stickers/st4.webp','kiara/stickers/st5.webp')
