debuggenado links de las músicas

--- a/perfiles/mirella.pug
+++ b/perfiles/mirella.pug
@@ -12,7 +12,7 @@ block photos
 
 block songs
 	h2.section__title.title__flex Canciones
-	+songs('mirella/canciones/cn1.jpg','Fuentes de Ortiz', 'Holy Oysters','3:44 min', 'https://www.youtube.com/watch?v=z1Qj4aYaODU')
+	+songs('mirella/canciones/cn1.jpg','Fuentes de Ortiz', 'Ed Maverick','3:31 min', 'https://www.youtube.com/watch?v=PaoCQHwTPg4')
 	+songs('mirella/canciones/cn2.jpg','Dreamers', 'Savoir Adore', '4:17 min', 'https://www.youtube.com/watch?v=qH4ryqWze6U')
 	+songs('mirella/canciones/cn3.jpg', 'More Than a Woman','Bee Gees','3:17 min', 'https://www.youtube.com/watch?v=EOP-xCzLrIM')
-	+songs('mirella/canciones/cn4.jpg','Time Leap','Aero Chord','3:40 min','https://www.youtube.com/watch?v=CFPLIaMpGrY')
+	+songs('mirella/canciones/cn4.jpg','Time Leap','Aero Chord','3:40 min','https://www.youtube.com/watch?v=beDFafObkFw')
